Update 1: Developed basic video uploading & fetching features